<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/comediens_title"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:text="@string/popular_humorist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:textColor="@color/menu_unselected"
            android:textSize="14sp"
            android:gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/voir_all_tv"
            android:text="@string/see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclercomediens"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/populaire"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/favoris_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>