<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingRight="2dp"
    android:paddingTop="5dp"
    android:paddingLeft="2dp"
    android:background="@color/pages_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:id="@+id/contactText"
                android:text="@string/contact_us"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/review"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:id="@+id/reviewText"
                android:text="@string/review"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="14sp"
                android:id="@+id/notificationText"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/notifications"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/data"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:id="@+id/datatext"
                android:text="@string/data_usage"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>
        <LinearLayout
            android:background="#BCB7B7"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/disclaimer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:id="@+id/disclaimerText"
                android:text="@string/disclaimer_title"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/more"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="14sp"
                android:id="@+id/moreText"
                android:textColor="@android:color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/more_apps"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="35dp"
                android:layout_height="25dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>