<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/pages_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/pub_banner">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:background="#fff"
        android:paddingTop="8dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/accueil"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/accueil_image"
                android:src="@drawable/home_selected"
                android:layout_width="@dimen/footer_image_size"
                android:layout_height="@dimen/footer_image_size" />
            <TextView
                android:id="@+id/accueil_text"
                android:textSize="@dimen/footer_text_size"
                android:text="@string/accueil"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/tendances"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tendances_image"
                android:src="@drawable/fire"
                android:layout_width="@dimen/footer_image_size"
                android:layout_height="@dimen/footer_image_size" />
            <TextView
                android:id="@+id/tendances_text"
                android:textSize="@dimen/footer_text_size"
                android:textColor="@color/menu_unselected"
                android:text="Tendances"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/comediens"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/comediens_image"
                android:src="@drawable/clown"
                android:layout_width="@dimen/footer_image_size"
                android:layout_height="@dimen/footer_image_size" />
            <TextView
                android:id="@+id/comediens_text"
                android:textSize="@dimen/footer_text_size"
                android:textColor="@color/menu_unselected"
                android:text="@string/comediens"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/more"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/more_image"
                android:src="@drawable/more"
                android:layout_width="@dimen/footer_image_size"
                android:layout_height="@dimen/footer_image_size" />
            <TextView
                android:id="@+id/more_text"
                android:textSize="@dimen/footer_text_size"
                android:textColor="@color/menu_unselected"
                android:text="@string/plus"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>